--- a/src/quickstart/src/quickstart-avalonia/MainWindow.axaml
+++ b/src/quickstart/src/quickstart-avalonia/MainWindow.axaml
@@ -6,5 +6,5 @@
         x:Class="ScottPlot.Demo.Avalonia.MainWindow"
         xmlns:ScottPlot="clr-namespace:ScottPlot.Avalonia;assembly=ScottPlot.Avalonia"
         Title="Avalonia Quickstart" Width="500" Height="350">
-  <AvaPlot Name="AvaPlot1"/>
+	<ScottPlot:AvaPlot Name="AvaPlot1"/>
 </Window>
